
Fixed bug that would throw a VirtualBox error when cloning the
"Current State" item of a virtual machine on the Snapshot tab.

Fixed regression bug that would show all USB devices as being
attached in the USB Devices section of the Settings toolbar menu.

Fixed bug that would cause an error when "USB Devices" was clicked
in the Settings toolbar menu.

-------------------------------------
	4.1-3	2011-9-20
-------------------------------------
Added Polish translation.

Fixed 4.1-0 regression bug that would not allow runtime attachment
of USB devices from the Settings menu in the toolbar.

Fixed 4.1-1 regression bug that would not allow one to edit
existing USB filters for a running VM.

Better handling of CD/DVD medium changes when 'Live CD/DVD' is not
selected for a medium attachment.

Less context menu levels for removable media attachments in the
Settings toolbar button menu of a running VM when the VM only has 1
removable media attachment of the a given type (CD/DVD and Floppy).

Improved Guest Additions installation handling.

Added test to check that PHP files are being parsed as PHP and
associated error message if not.

Added Parallels hard disk image format creation support. Available
hard disk formats and their capabilities are now programmatically
obtained through the VirtualBox API.

Minor translation fixes.

Advanced acceleration options are now correctly hidden when
enableAdvancedConfig is not enabled in config.php.

Login form on console tab is now hidden if remote console
authentication is set to None. This should avoid some confusion.

Improved PHP session handling. This should resolve some timeout
issues and speed up response time in phpVirtualBox.

Added context menus to the Virtual Media Manager.

Added workaround for http://www.virtualbox.org/ticket/9255. Taking
a snapshot of a running VM now prompts to pause the VM if
VirtualBox <= 4.1.2 is detected.

Fixed VM cloning bug.
http://code.google.com/p/phpvirtualbox/issues/detail?id=380
